Add submission file and finish assignment

--- a/submission.html
+++ b/submission.html
@@ -4,15 +4,15 @@
   
   <p>
     <strong>1. GitHub Repository:</strong><br>
-    <a href="https://github.com/YourUsername/Week10-ImageCards">
+    <a href="https://github.com/qdao1906/Week10-ImageCards">
       https://github.com/YourUsername/Week10-ImageCards
     </a>
   </p>
 
   <p>
     <strong>2. Live Website:</strong><br>
-    <a href="https://YourUsername.github.io/Week10-ImageCards/">
-      https://YourUsername.github.io/Week10-ImageCards/
+    <a href="https://qdao1906.github.io/Week10-ImageCards/">
+      https://qdao1906.github.io/Week10-ImageCards/
     </a>
   </p>
 </body>
